--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.Core" Version="3.5.0-beta" />
       <PackageReference Include="MySql.Data" Version="8.0.20" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
