--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="AWSSDK.Core" Version="3.5.0-beta" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.4.20220.10" />
       <PackageReference Include="MySql.Data" Version="8.0.20" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
